update all Training -close#394
